# asteroidsGame

./: ASTEROIDS.project  ASTEROIDS.workspace  CMakeCache.txt  CMakeLists.txt  Makefile  asteroid  asteroids  cmake_install.cmake
.codelite/: ASTEROIDS.session  refactoring.db
glfw-3.2/: GLFW.project  Makefile  cmake_install.cmake
glfw-3.2/docs/: Doxyfile  Makefile  cmake_install.cmake  warnings.txt
glfw-3.2/docs/html/: annotated.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_a.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  globals_defs_n.html  (+93 more)
glfw-3.2/docs/html/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_3.js  functions_0.js  groups_1.js  groups_7.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_11.js  variables_13.js  variables_14.js  (+13 more)
glfw-3.2/src/: Makefile  cmake_install.cmake
shaders/: fshader_Asteroid.glsl  ftexture_Shader.glsl  shader.cpp  vshader_Asteroid.glsl  vshader_Ship.glsl  vtexture_Shader.glsl
source/: Asteroid.cpp  Asteroid.h  Background.cpp  Background.h  Bullet.cpp  Bullet.h  Explosion.cpp  Explosion.h  Ship.cpp  Ship.h  common.h  main.cpp
source/utils/: geometryhelpers.cpp  geometryhelpers.h  vec.h
